--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-spring.datasource.url=jdbc:mysql://192.168.53.35:3306/youli
+#spring.datasource.url=jdbc:mysql://192.168.53.35:3306/youli
+spring.datasource.url=jdbc:mysql://localhost:3306/dk-180
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456
-
+spring.datasource.password=m123456798
+# spring.datasource.password=123456
+#自动生成映射（查不到的还是要将字段写上去）
+mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.mapper.xml
 # 修改默认的项目的根路径
 server.servlet.context-path=/youli
 
 server.port=8080
-
-spring.redis.host=192.168.85.66
-spring.redis.port=6379
-spring.redis.password=123456
